# dataeng-python

./: .gitignore  README.md  __azurite_db_queue__.json  __azurite_db_queue_extent__.json  requirments.txt
MatplotLib/: 01_LineChart.py  02_BarChart.py  03_Histogram.py  04_ScatterPlot.py  05_StackPlots.py  06_BasicCustomizations.py  07_LiveGraphs.py  07_LiveGraphs.txt  08_AddElements.py  09_AddSubPlots.py  10_AddSubPlots_Grids.py  11_Common_xaxis.py  12_MultiYaxis.py  readme.md
book_Python_Tricks_Dan_Bader/: 00__Notes.txt  00_assert.py  01_custom_contex_managers.py  04_Effective_functions.py  (+9 more)
production-ready-engineering/: Development_Notes.MD  README.md  makefile  pyproject.toml
production-ready-engineering/src/: main.py
production-ready-engineering/src/models/: get_object.py
production-ready-engineering/tests/: test_get_object.py
production_ready_engineering/: .coverage  .env  Development_Notes.md  capstone_project.md  makefile  pyproject.toml
production_ready_engineering/data/: events.json
production_ready_engineering/data/source/: events.json
production_ready_engineering/src/: main.py
production_ready_engineering/src/capstone/: main.py
production_ready_engineering/src/capstone/config/: config.py
production_ready_engineering/src/capstone/models/: events.py
production_ready_engineering/src/capstone/pipeline/: event_processor.py
production_ready_engineering/src/config/: config.py
production_ready_engineering/src/models/: events.py
production_ready_engineering/src/producer/: producer.py
production_ready_engineering/tests/: test_prodecer.py
(+57 files in other folders)
