[project]
name = "production-ready-engineering"
version = "0.1.0"
description = "This is a project that demostrates the best practices in software engineering"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.12.5",
    "pyright>=1.1.408",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.14",
]
